{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 148,
  "lineage": "2898fa47-602f-e188-6795-d51b2f3ad059",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3306"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-06-02T07:14:34.840-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/tfg-asir-2026/global/firewalls/permitir-db-interna",
            "log_config": [],
            "name": "permitir-db-interna",
            "network": "https://www.googleapis.com/compute/v1/projects/tfg-asir-2026/global/networks/vpc-proyecto-asir",
            "priority": 1000,
            "project": "tfg-asir-2026",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tfg-asir-2026/global/firewalls/permitir-db-interna",
            "source_ranges": [
              "10.0.1.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "base-datos"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_asir"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-06-02T07:14:34.968-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/tfg-asir-2026/global/firewalls/permitir-ssh",
            "log_config": [],
            "name": "permitir-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/tfg-asir-2026/global/networks/vpc-proyecto-asir",
            "priority": 1000,
            "project": "tfg-asir-2026",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tfg-asir-2026/global/firewalls/permitir-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_asir"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-06-02T07:14:34.733-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/tfg-asir-2026/global/firewalls/permitir-web",
            "log_config": [],
            "name": "permitir-web",
            "network": "https://www.googleapis.com/compute/v1/projects/tfg-asir-2026/global/networks/vpc-proyecto-asir",
            "priority": 1000,
            "project": "tfg-asir-2026",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tfg-asir-2026/global/firewalls/permitir-web",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "servidor-web"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_asir"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "base_datos",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20260528",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/tfg-asir-2026/zones/europe-southwest1-a/disks/servidor-db-asir"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/tfg-asir-2026/zones/europe-southwest1-a/instances/servidor-db-asir",
            "instance_id": "8236899613424180110",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "pSJlLz-gU2E=",
            "metadata_startup_script": "    #!/bin/bash\n    timedatectl set-timezone Europe/Madrid\n    apt-get update\n    apt-get install -y mariadb-server cron\n\n    sed -i 's/bind-address.*/bind-address = 0.0.0.0/' /etc/mysql/mariadb.conf.d/50-server.cnf\n    systemctl restart mariadb\n    systemctl enable mariadb\n\n    mysql -e \"CREATE DATABASE IF NOT EXISTS tfg_db;\"\n    mysql -e \"CREATE USER IF NOT EXISTS 'user_tfg'@'%' IDENTIFIED BY 'Password123!';\"\n    mysql -e \"GRANT ALL PRIVI [...]
            "name": "servidor-db-asir",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/tfg-asir-2026/global/networks/vpc-proyecto-asir",
                "network_ip": "10.0.2.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/tfg-asir-2026/regions/europe-southwest1/subnetworks/subred-privada",
                "subnetwork_project": "tfg-asir-2026"
              }
            ],
            "project": "tfg-asir-2026",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/tfg-asir-2026/zones/europe-southwest1-a/instances/servidor-db-asir",
            "service_account": [
              {
                "email": "18882779954-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "base-datos"
            ],
            "tags_fingerprint": "FsRtTSxDIPw=",
            "zone": "europe-southwest1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_asir",
            "google_compute_subnetwork.subred_privada",
            "google_storage_bucket.bucket_backups"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "servidor_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20260528",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/tfg-asir-2026/zones/europe-southwest1-a/disks/servidor-web-asir"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/tfg-asir-2026/zones/europe-southwest1-a/instances/servidor-web-asir",
            "instance_id": "6642363270725589891",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "hfSbNt-Y87E=",
            "metadata_startup_script": "    #!/bin/bash\n    timedatectl set-timezone Europe/Madrid\n    apt-get update\n    apt-get install -y apache2 php libapache2-mod-php php-mysql\n    rm -f /var/www/html/index.html\n\n    cat \u003c\u003c 'PHP_EOF' \u003e /var/www/html/index.php\n\u003c?php\r\n// ============================================================================\r\n// PRESENTACIÓN TFG ASIR - JULIO SANDE\r\n// ======================================================================= [...]
            "name": "servidor-web-asir",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.175.147.71",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/tfg-asir-2026/global/networks/vpc-proyecto-asir",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/tfg-asir-2026/regions/europe-southwest1/subnetworks/subred-publica",
                "subnetwork_project": "tfg-asir-2026"
              }
            ],
            "project": "tfg-asir-2026",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/tfg-asir-2026/zones/europe-southwest1-a/instances/servidor-web-asir",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "servidor-web"
            ],
            "tags_fingerprint": "5CR-LlH8X8c=",
            "zone": "europe-southwest1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_asir",
            "google_compute_subnetwork.subred_publica"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_asir",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/tfg-asir-2026/global/networks/vpc-proyecto-asir",
            "mtu": 0,
            "name": "vpc-proyecto-asir",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "tfg-asir-2026",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tfg-asir-2026/global/networks/vpc-proyecto-asir"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-06-02T07:14:34.907-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/tfg-asir-2026/regions/europe-southwest1/routers/router-proyecto-asir",
            "name": "router-proyecto-asir",
            "network": "https://www.googleapis.com/compute/v1/projects/tfg-asir-2026/global/networks/vpc-proyecto-asir",
            "project": "tfg-asir-2026",
            "region": "europe-southwest1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tfg-asir-2026/regions/europe-southwest1/routers/router-proyecto-asir"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_asir"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "tfg-asir-2026/europe-southwest1/router-proyecto-asir/nat-proyecto-asir",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "nat-proyecto-asir",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "tfg-asir-2026",
            "region": "europe-southwest1",
            "router": "router-proyecto-asir",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "projects/tfg-asir-2026/regions/europe-southwest1/subnetworks/subred-privada",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_asir",
            "google_compute_router.router",
            "google_compute_subnetwork.subred_privada"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subred_privada",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-06-02T07:14:35.237-07:00",
            "gateway_address": "10.0.2.1",
            "id": "projects/tfg-asir-2026/regions/europe-southwest1/subnetworks/subred-privada",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "subred-privada",
            "network": "https://www.googleapis.com/compute/v1/projects/tfg-asir-2026/global/networks/vpc-proyecto-asir",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "tfg-asir-2026",
            "purpose": "PRIVATE",
            "region": "europe-southwest1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tfg-asir-2026/regions/europe-southwest1/subnetworks/subred-privada",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_asir"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subred_publica",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-06-02T07:14:35.198-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/tfg-asir-2026/regions/europe-southwest1/subnetworks/subred-publica",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "subred-publica",
            "network": "https://www.googleapis.com/compute/v1/projects/tfg-asir-2026/global/networks/vpc-proyecto-asir",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "tfg-asir-2026",
            "purpose": "PRIVATE",
            "region": "europe-southwest1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tfg-asir-2026/regions/europe-southwest1/subnetworks/subred-publica",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_asir"
          ]
        }
      ]
    }
  ]
}